Update resume: ampersands in titles, larger QR code, add SEO meta tags, fix 'roadmap' typo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Derek Simmons | Executive Editor Resume</title>
+<meta name="description" content="Executive Editor with 20+ years driving digital transformation and $20M+ revenue generation across major metro media organizations.">
+<meta property="og:title" content="Derek Simmons | Executive Editor Resume">
+<meta property="og:description" content="Executive Editor with 20+ years driving digital transformation and revenue generation across major metro media organizations.">
+<meta property="og:type" content="profile">
 <style>
   * {box-sizing: border-box;}
   body {
@@ -29,13 +33,14 @@
   }
   .qr-code {
     position: absolute;
-    top: 28px;
+    top: 24px;
     right: 50px;
-    width: 70px;
-    height: 70px;
+    width: 90px;
+    height: 90px;
     background: white;
-    padding: 4px;
-    border-radius: 4px;
+    padding: 5px;
+    border-radius: 6px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
   }
   .qr-code img {
     width: 100%;
@@ -47,13 +52,13 @@
     margin: 0 0 7px 0;
     font-weight: 700;
     letter-spacing: -0.5px;
-    padding-right: 90px;
+    padding-right: 110px;
   }
   .contact {
     font-size: 0.92em;
     opacity: 0.95;
     margin-top: 6px;
-    padding-right: 90px;
+    padding-right: 110px;
   }
   .contact a {
     color: white;
@@ -251,19 +256,19 @@
     <h2>Leadership Experience</h2>
     
     <div class="job-header">
-      <h3>Executive Director, New Products/Digital Strategy</h3>
+      <h3>Executive Director, New Products & Digital Strategy</h3>
       <span class="date">Feb 2023 – Oct 2024</span>
     </div>
     <div class="organization">Star Tribune Media Company, Minneapolis</div>
     <ul>
-      <li>Championed AI strategy establishing integration and innovation road map.</li>
+      <li>Championed AI strategy establishing integration and innovation roadmap.</li>
       <li>Served on senior leadership team redefining company mission, values, and digital presence.</li>
       <li>Led digital‑product evolution driving significant audience and revenue growth.</li>
       <li>Launched franchises generating seven‑figure annual sponsorship support for journalism.</li>
     </ul>
 
     <div class="job-header">
-      <h3>Chief Creative Officer / Vice President</h3>
+      <h3>Chief Creative Officer & Vice President</h3>
       <span class="date">Jun 2017 – Feb 2023</span>
     </div>
     <div class="organization">Star Tribune Media Company, Minneapolis</div>
